# netlify-ddns-rs

./: .mailmap  .travis.yml  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  cliff.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
contrib/: _incr_version
src/: lib.rs  main.rs  netlify.rs
