[package]
name = "netlify-ddns"
version = "0.3.4"
authors = ["Luke Hsiao <luke@hsiao.dev>"]
edition = "2021"
description = "A simple CLI tool for setting Netlify DNS records dynamically."
repository = "https://github.com/lukehsiao/netlify-ddns-rs"
readme = "README.md"
license = "BlueOak-1.0.0"
categories = ["command-line-utilities"]
keywords = ["dynamic", "ddns", "dns", "netlify", "networking"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive", "env"] }
futures = "0.3.30"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.119"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
ureq = { version = "2.9.7", features = ["tls"] }

[dev-dependencies]
mockito = "0.31.1"

[profile.release]
debug = false

[package.metadata.release]
pre-release-commit-message = "chore: version {{version}}"
post-release-commit-message = "chore: bump development version to {{next_version}}"
tag-message = "{{crate_name}} {{version}}"
