[package]
name = "netlify-ddns"
version = "0.3.4"
authors = ["Luke Hsiao <luke@hsiao.dev>"]
edition = "2024"
description = "A simple CLI tool for setting Netlify DNS records dynamically."
repository = "https://github.com/lukehsiao/netlify-ddns-rs"
readme = "README.md"
license = "BlueOak-1.0.0"
categories = ["command-line-utilities"]
keywords = ["dynamic", "ddns", "dns", "netlify", "networking"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive", "env"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
ureq = { version = "2.12.1", features = ["tls"] }

[dev-dependencies]
mockito = "0.31.1"

[profile.release]
debug = false

[package.metadata.release]
pre-release-commit-message = "chore: version {{version}}"
post-release-commit-message = "chore: bump development version to {{next_version}}"
tag-message = "{{crate_name}} {{version}}"
